:green_heart: update ci setting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           name: Run unit tests
           command: |
             gotestsum --junitfile ${TEST_RESULTS}/unit-tests.xml -- -p 6 -race -cover ./...
-      - run: go build ./...
+      - run: go build ./cmd/...
 
       - store_artifacts:
           path: /tmp/test-results
